--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,11 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
     //Logger
     implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'androidx.room:room-runtime:2.2.5'
 
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    annotationProcessor 'androidx.room:room-compiler:2.2.5'
 }
